# iridium

./: .flake8  .gitignore  LICENSE  MANUAL.md  README.md  TUTORIAL.md  index.html  iridium.html  pyproject.toml  search.js
.github/actions/setup-inveniordm/: action.yml  inveniordm-test.config.ini  setup_api_user.sh  wait_for_index.sh
.github/workflows/: ci.yml
iridium/: __init__.py  api.html  api.py  cli.html  cli.py  generic.html  generic.py  inveniordm.html  pprint.html  pprint.py  query.html  query.py  record.html  record.py  util.html  util.py
iridium/inveniordm/: __init__.py  api.html  api.py  models.html
iridium/inveniordm/models/: __init__.py  base.html  base.py  biblio.html  biblio.py  query.html  query.py  technical.html  technical.py
tests/: __init__.py  conftest.py  test_api.py  test_generic.py  test_inveniordm_api.py  test_iridium.py  test_iridium_generic.py  test_utils.py
